fix: bike controller swagger, additional jwt in header request
