# controllers/bike_controller.go
@@ -37,12 +37,11 @@ func NewBikeController(bikeService *services.BikeService) *BikeController {
 // @Failure 500	{object} web.WebInternalServerError
 // @Router /api/bikes [post]
 func (controller *BikeController) CreateBike(c *gin.Context) {
-	var bikeReq request.CreateBikeRequest
+	utils.UserRoleMustAdmin(c)
 
+	var bikeReq request.CreateBikeRequest
 	err := c.ShouldBindJSON(&bikeReq)
 	utils.PanicIfError(err)
-
-	utils.UserRoleMustAdmin(c)
 
 	res, err := controller.bikeService.CreateBike(c, &bikeReq)
 	utils.PanicIfError(err)
@@ -51,31 +50,31 @@ func (controller *BikeController) CreateBike(c *gin.Context) {
 }
 
 // UpdateBike godoc
-//
-//	@Summary		Update a bike
-//	@Description	Update an existing bike
-//	@Tags			Bikes
-//	@Accept			json
-//	@Produce		json
-//	@Param			id		path		uint						true	"Bike ID"
-//	@Param			bike	body		request.UpdateBikeRequest	true	"Bike body"
-//	@Success		200		{object}	web.WebSuccess[response.BikeResponse]
-//	@Failure		400		{object}	web.WebBadRequestError
-//	@Failure		404		{object}	web.WebNotFoundError
-//	@Failure		500		{object}	web.WebInternalServerError
-//	@Router			/api/bikes/{id} [patch]
+// @Summary Update a bike
+// @Description	Update an existing bike
+// @Tags Bikes
+// @Accept json
+// @Produce json
+// @Param Authorization	header string true "Authorization. How to input in swagger : 'Bearer <insert_your_token_here>'"
+// @Security BearerToken
+// @Param id path uint true	"Bike ID"
+// @Param bike body request.UpdateBikeRequest	true	"Bike body"
+// @Success 200 {object} web.WebSuccess[response.BikeResponse]
+// @Failure 400 {object} web.WebBadRequestError
+// @Failure 404 {object} web.WebNotFoundError
+// @Failure 500 {object} web.WebInternalServerError
+// @Router /api/bikes/{id} [patch]
 func (controller *BikeController) UpdateBike(c *gin.Context) {
-	var bikeReq request.UpdateBikeRequest
+	utils.UserRoleMustAdmin(c)
 
-	err := c.ShouldBindJSON(&bikeReq)
-	utils.PanicIfError(err)
-
-	idStr := c.Param("id")
-	id, err := strconv.ParseUint(idStr, 10, 32)
+	id, err := strconv.ParseUint(c.Param("id"), 10, 32)
 	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid ID"})
-		return
+		utils.PanicIfError(exceptions.NewCustomError(http.StatusBadRequest, "id must be an integer"))
 	}
+
+	var bikeReq request.UpdateBikeRequest
+	err = c.ShouldBindJSON(&bikeReq)
+	utils.PanicIfError(err)
 
 	res, err := controller.bikeService.UpdateBike(c, uint(id), &bikeReq)
 	utils.PanicIfError(err)
@@ -84,22 +83,23 @@ func (controller *BikeController) UpdateBike(c *gin.Context) {
 }
 
 // DeleteBike godoc
-//
-//	@Summary		Delete a bike
-//	@Description	Delete a bike by ID
-//	@Tags			Bikes
-//	@Produce		json
-//	@Param			id		path		uint	true	"Bike ID"
-//	@Success		204		{object}	web.WebSuccess[response.BikeResponse]
-//	@Failure		404		{object}	web.WebNotFoundError
-//	@Failure		500		{object}	web.WebInternalServerError
-//	@Router			/api/bikes/{id} [delete]
+// @Summary Delete a bike
+// @Description	Delete a bike by ID
+// @Tags Bikes
+// @Produce json
+// @Param Authorization	header string true "Authorization. How to input in swagger : 'Bearer <insert_your_token_here>'"
+// @Security BearerToken
+// @Param id path uint true "Bike ID"
+// @Success 200 {object} web.WebSuccess[response.BikeResponse]
+// @Failure 404 {object} web.WebNotFoundError
+// @Failure 500 {object} web.WebInternalServerError
+// @Router /api/bikes/{id} [delete]
 func (controller *BikeController) DeleteBike(c *gin.Context) {
-	idStr := c.Param("id")
-	id, err := strconv.ParseUint(idStr, 10, 32)
+	utils.UserRoleMustAdmin(c)
+
+	id, err := strconv.ParseUint(c.Param("id"), 10, 32)
 	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid ID"})
-		return
+		utils.PanicIfError(exceptions.NewCustomError(http.StatusBadRequest, "id must be an integer"))
 	}
 
 	err = controller.bikeService.DeleteBike(c, uint(id))
@@ -109,14 +109,13 @@ func (controller *BikeController) DeleteBike(c *gin.Context) {
 }
 
 // GetAllBikes godoc
-//
-//	@Summary		Get all bikes
-//	@Description	Get all bikes
-//	@Tags			Bikes
-//	@Produce		json
-//	@Success		200		{object}	web.WebSuccess[[]response.BikeResponse]
-//	@Failure		500		{object}	web.WebInternalServerError
-//	@Router			/api/bikes [get]
+// @Summary Get all bikes
+// @Description	Get all bikes
+// @Tags Bikes
+// @Produce json
+// @Success 200 {object} web.WebSuccess[[]response.BikeResponse]
+// @Failure 500 {object} web.WebInternalServerError
+// @Router /api/bikes [get]
 func (controller *BikeController) GetAllBikes(c *gin.Context) {
 	res, err := controller.bikeService.GetAllBikes(c)
 	utils.PanicIfError(err)
@@ -125,21 +124,19 @@ func (controller *BikeController) GetAllBikes(c *gin.Context) {
 }
 
 // GetBikeByID godoc
-//
-//	@Summary Get a bike by ID
-//	@Description	Get a bike by ID
-//	@Tags Bikes
-//	@Produce		json
-//	@Param			id		path		uint	true	"Bike ID"
-//	@Success		200		{object}	web.WebSuccess[response.BikeResponse]
-//	@Failure		404		{object}	web.WebNotFoundError
-//	@Failure		500		{object}	web.WebInternalServerError
-//	@Router			/api/bikes/{id} [get]
+// @Summary Get a bike by ID
+// @Description	Get a bike by ID
+// @Tags Bikes
+// @Produce json
+// @Param id path uint true	"Bike ID"
+// @Success 200 {object} web.WebSuccess[response.BikeResponse]
+// @Failure 404 {object} web.WebNotFoundError
+// @Failure 500 {object} web.WebInternalServerError
+// @Router /api/bikes/{id} [get]
 func (controller *BikeController) GetBikeByID(c *gin.Context) {
-	idStr := c.Param("id")
-	id, err := strconv.ParseUint(idStr, 10, 32)
+	id, err := strconv.ParseUint(c.Param("id"), 10, 32)
 	if err != nil {
-		panic(exceptions.NewCustomError(http.StatusBadRequest, "id must be an integer"))
+		utils.PanicIfError(exceptions.NewCustomError(http.StatusBadRequest, "id must be an integer"))
 	}
 
 	res, err := controller.bikeService.GetBikeByID(c, uint(id))
