# docs/swagger.json
@@ -362,6 +362,11 @@
                 }
             },
             "patch": {
+                "security": [
+                    {
+                        "BearerToken": []
+                    }
+                ],
                 "description": "Update an existing bike",
                 "consumes": [
                     "application/json"
@@ -374,6 +379,13 @@
                 ],
                 "summary": "Update a bike",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization. How to input in swagger : 'Bearer \u003cinsert_your_token_here\u003e'",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "integer",
                         "description": "Bike ID",
